# Diplom

Docs/BKР_tex/: My_practice.aux  My_practice.bbl  My_practice.bcf  My_practice.blg  My_practice.out  My_practice.tex  My_practice.toc  diplom.tex
Docs/BKР_tex/my_folder/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.blg  chapter3.tex  chapter4.tex  chapter5.tex  conclusion.tex  introduction.tex  my_biblio.bib  practice.tex  references.tex  task.tex  title.tex
Docs/BKР_tex/my_folder/tex/: fig-spbpu-whitehall-three-in-one.tex
Docs/BKР_tex/template_settings/: ch_preamble.tex
Docs/BKР_tex/template_settings/biblio/: biblatex.tex
Docs/BKР_tex/template_settings/common/: myindex.ist  packages.tex
Docs/Презентация/: presentation.tex  presentation.txt
src/Assignment_task/: AuctionAlgo.hpp  CMakeLists.txt  CMakeLists.txt.user.7cf8cfb  CMakeLists.txt.user.b9028d4  HungarianAlgo.hpp  index.html  main.cpp
src/ColPlanAlgo/: AssignmentAlgo.hpp  AuctionAlgo.hpp  CMakeLists.txt  COI_3_1.hpp  COI_3_3.hpp  COI_3_4.hpp  COI_3_6.hpp  COI_3_7.hpp  COI_3_9.hpp  main.cpp  solving_LP.hpp
